--- a/templates/lottory.html
+++ b/templates/lottory.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1>本期神預測樂x號碼</h1>
+    <h1>本期神預測樂x號碼 如期而至</h1>
     <h2>{{numbers}} 斯被修號碼:
         <span class="x">
             {{x}}
